kube/helloworld/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /helloworld
            backend:
              serviceName: helloworld-service
              servicePort: 80
